# kantenas

kantenas/: AUTHORS  Makefile.in  configure  configure.in  configure.in.in  kantenas.kdevelop
kantenas/autom4te.cache/: output.0  traces.0
kantenas/debug/: Makefile  config.h  config.status  libtool
kantenas/debug/doc/: Makefile
kantenas/debug/doc/en/: Makefile  index.cache.bz2
kantenas/debug/po/: Makefile
kantenas/debug/src/: Makefile  kantenas  kantenas.moc  kantenasMain.cpp  kantenasMain.h  kantenasMain.moc
kantenas/debug/src/.deps/: kantenas.Po  kantenasMain.Po  main.Po
kantenas/doc/: Makefile.am  Makefile.in
kantenas/doc/en/: Makefile.am  Makefile.in  index.docbook
kantenas/po/: Makefile.in
kantenas/src/: Makefile.am  Makefile.in  kantenas.cpp  kantenas.desktop  kantenas.h  kantenas.lsm  kantenasMain.ui  kantenasMain.ui.h  kantenasui.rc  main.cpp
kantenas/templates/: cpp
